--- a/src/components/carousel/swiper.css
+++ b/src/components/carousel/swiper.css
@@ -29,6 +29,7 @@
   padding: 0;
   /* Fix of Webkit flickering */
   z-index: 1;
+  height: 100vh;
 }
 .swiper-container-vertical > .swiper-wrapper {
   flex-direction: column;
